feat: second class web part finished

--- a/web/index.html
+++ b/web/index.html
@@ -3,19 +3,19 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link
-    rel="icon"
-    type="image/svg+xml"
-    href="/vite.svg"
-  />
   <meta
     name="viewport"
     content="width=device-width, initial-scale=1.0"
   />
+  <link
+    rel="shortcut icon"
+    href="favicon.ico"
+    type="image/x-icon"
+  >
   <title>Habits</title>
 </head>
 
-<body>
+<body class="bg-background text-slate-200">
   <div id="root"></div>
   <script
     type="module"
